package majiang;

//麻将牌的结构
message MJPai {
    optional int32 index = 1;
    optional int32 flower = 2;
    optional int32 value = 3;
    optional string des = 4;
}

//手里的一副牌
message MJHandPai {
    repeated MJPai Pais = 1;
    repeated MJPai PengPais = 2;
    repeated MJPai GangPais = 3;
    repeated MJPai HuPais = 4;
}

//麻将牌的结构
message MjDesk {
    optional int32 DeskId = 1;
    optional int32 RoomId = 2;
    optional int32 Status = 3;
    repeated MjUser users = 4;
    optional string Password = 5; //房间号码
    optional uint32 Owner = 6; //房主
    optional int64 CreateFee = 7;
    optional int32 mjRoomType = 8; // 房间类型，如：血战到底、三人两房、四人两房、德阳麻将、倒倒胡、血流成河
    optional int32 boardsCout = 9; // 局数，如：4局（房卡 × 2）、8局（房卡 × 3）
    optional int64 capMax = 10; // 封顶，如：2番、3番、4番
    optional int32 cardsNum = 11; // 牌张，如：7张、10张、13张
    optional int32 settlement = 12; // 结算，如：1拖1、1拖2、3拖5
    optional int64 baseValue = 13; // 底
    optional int32 ziMoRadio = 14; // 单选，自摸类型，如：自摸加底、自摸加番等
    optional int32 dianGangHuaRadio = 15; // 单选，点炮类型，如：点杠花（点炮）、点杠花（自摸）等
    repeated int32 othersCheckBox = 16; // 其他可复选的玩法，如：换三张、幺九将对、门清中张、天地胡、卡二条、可胡七对等
    optional int32 huRadio = 17; // 胡法，如：自摸胡、点炮胡（可抢杠）
    repeated MJPai AllMJPai = 18;
    repeated MJPai DeskMJPai = 19; //桌面上的牌
    optional int32 MJPaiNexIndex = 20; //下一张可以摸的牌
    optional int32 TotalPlayCount = 21; //总共几局
    optional int32 CurrPlayCount = 22; //当前玩到第几局

}

//手里的一副牌
message MjUser {
    optional uint32 UserId = 1;
    optional int64 Coin = 2; //游戏中的带入金额
    optional int32 RebuyCount = 3; //重购次数
    optional MJHandPai MJHandPai = 4; //用户的麻将牌
    optional int32 Status = 5; //玩家当前的状态
    optional bool IsBreak = 6; //是否断线
    optional bool IsLeave = 7; //是否离开
    optional int32 DeskId = 8; //
    optional int32 RoomId = 9;
    optional bool DingQue = 10;
    optional bool Exchanged = 11;
    optional bool Ready = 12;
    optional bool IsBanker = 13; //是否是庄家
}

//用户的session
message MjSession {
    optional uint32 UserId = 1;
    optional int32 RoomId = 2;
    optional int32 DeskId = 3;
    optional int32 GameStatus = 4; //游戏的状态，

}

//一个麻将room
message MjRoom {
    optional int32 RoomId = 1;
    optional int32 RoomType = 2;
    optional int64 ReadyTime = 3;
    optional int64 BeginTime = 4;
    optional int64 EndTIme = 5;
    repeated MjDesk Desks = 6;
    optional int32 PaiIndexNow = 7;
    repeated MJPai MjPais = 8;

}